--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="8dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <cn.magic.myself.banner2.banner.Banner
+        android:id="@+id/banner"
+        style="@style/BannerTheme"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layerType="hardware"
+        app:cornerAllRadius="4dp"
+        app:isNeedAllcorner="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:textColorOfBanner="@color/colorAccent"
+        app:textOfBannerBackground="@color/white"
+        app:aspectRadioWidth="match_parent"
+        app:aspectRadioHeight="wrap_content"
+        app:textSizeOfBanner="12sp"
+        app:selectColorId="@color/point_color_primary"
+        app:unSelectColorId="@color/colorPrimaryDark">
+    </cn.magic.myself.banner2.banner.Banner>
+
+    <Button
+        android:id="@+id/start_flip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="开始滑动"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/banner" />
+
+    <Button
+        android:id="@+id/stop_flip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="停止滑动"
+        android:textSize="20sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/banner" />
 
 </android.support.constraint.ConstraintLayout>
