add: add circlePointGravity Attributes to show circle

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:layout_height="200dp"
         android:layerType="hardware"
         app:cornerAllRadius="4dp"
-        app:indicatorType="textAndPointIndicator"
+        app:indicatorType="threePointIndicator"
+        app:circlePointGravity="right"
         app:isNeedAllcorner="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
