update：delete useless message

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,14 @@
         android:layout_height="200dp"
         android:layerType="hardware"
         app:cornerAllRadius="4dp"
-        app:indicatorType="threePointIndicator"
+        app:indicatorType="textAndPointIndicator"
         app:circlePointGravity="right"
         app:isNeedAllcorner="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:textColorOfBanner="@color/colorAccent"
-        app:textOfBannerBackground="@color/white"
+        app:textOfBannerBackground="@color/color_background"
         app:aspectRadioWidth="match_parent"
         app:aspectRadioHeight="wrap_content"
         app:textSizeOfBanner="12sp"
